--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="today">Today</string>
     <string name="yesterday">Yesterday</string>
     <string name="mic_button">Mic Button</string>
+    <string name="top_app_bar_new_entry">New Entry</string>
 </resources>
