--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="yesterday">Yesterday</string>
     <string name="mic_button">Mic Button</string>
     <string name="top_app_bar_new_entry">New Entry</string>
+    <string name="recording_not_started_yet">Recording not started yet.</string>
 </resources>
